--- a/Python_Basics_1.ipynb
+++ b/Python_Basics_1.ipynb
@@ -276,14 +276,171 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Workflow & Indentation"
+      ],
+      "metadata": {
+        "id": "yDHbUKWR6rEq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Workflow is the series of activities that are necessary to complete a task"
+      ],
+      "metadata": {
+        "id": "KvnMKa6Q6Vog"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Indentation refers to the spaces at the beginning of a code line.\n",
+        "\n",
+        "Where in other programming languages the indentation in code is for readability only, the indentation in Python is very important.\n",
+        "\n",
+        "Python uses indentation to indicate a block of code.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "RFVAV3c_6pSF"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "# Python will give you an error if you skip the indentation:\n",
+        "\n",
+        "if 5 > 2:\n",
+        "print(\"Five is greater than two!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 135
+        },
+        "id": "wwiv1Tb47B86",
+        "outputId": "a3f88083-aa40-43f2-e11c-542f3f4ba6ff"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-d1b6e5b2ac47>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    print(\"Five is greater than two!\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if 5 > 2:\n",
+        "  print(\"Five is greater than two!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "32nwt5pG6om_",
+        "outputId": "de4b3cbe-d9c3-4a12-f249-dc25764730fa"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Five is greater than two!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# True, False"
+      ],
+      "metadata": {
+        "id": "Ghvv-PtA8E3_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Boolean True, False\n",
+        "\n",
+        "# If a statement is correct then it will return True\n",
+        "# IF the statement is NOT correct , it will return False\n",
+        "\n",
+        "a=1\n",
+        "b=2\n",
+        "c=1\n",
+        "\n",
+        "print(a==b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yyqL-2dO7x38",
+        "outputId": "e8a2bb7f-2d45-4e51-f58b-29dccb833180"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a==c)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qcV_vGkY8pZk",
+        "outputId": "7242c848-0711-4740-ca96-a396b26af729"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# IF, ELSE, ELIF"
+      ],
+      "metadata": {
+        "id": "jhEHMTfE7o9K"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a6UxeOH3DdZb",
-        "outputId": "6766920c-f71a-43d5-872b-8aa285c5c316"
+        "outputId": "c2f5bac6-8c8f-4535-8dea-43ebe7358f3b"
       },
       "outputs": [
         {
@@ -295,7 +452,7 @@
         }
       ],
       "source": [
-        "# workflow, identation\n",
+        "# IF the statement is true then..do something\n",
         "\n",
         "x = 1\n",
         "if x > 0:\n",
@@ -304,36 +461,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "jVgnDihPDu3Q"
-      },
-      "outputs": [],
-      "source": [
-        "x = -2"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "NBBxbc7FD6OU"
       },
       "outputs": [],
       "source": [
+        "x = -2\n",
+        "\n",
         "if x>0:\n",
         "  print('x is greater then 0')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "anr0MY6ND8SS",
-        "outputId": "f1aa4a15-6d69-46cb-c880-8a41c53b0ae7"
+        "outputId": "64957133-0025-4932-9a2c-a2e91a19f4b3"
       },
       "outputs": [
         {
@@ -345,6 +493,9 @@
         }
       ],
       "source": [
+        "# IF the statement is true then..do something, ELSE otherwise do something else\n",
+        "\n",
+        "x= -3\n",
         "if x>0:\n",
         "  print('x is grater then 0')\n",
         "else:\n",
@@ -353,13 +504,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "W5dMiQ1uEHul",
-        "outputId": "dedcce9c-2265-40d6-a091-61e89bdd46b3"
+        "outputId": "b4cd520b-5863-4287-e90c-5650884095b7"
       },
       "outputs": [
         {
@@ -380,25 +531,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 246
+          "base_uri": "https://localhost:8080/"
         },
         "id": "BfmAv-flEjNn",
-        "outputId": "57903823-9b42-44f1-b3a4-30424859d59d"
+        "outputId": "0cc8b8ec-1de1-44df-bd9c-4e72886cba11"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-c360178061c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'x is grater then 0'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32melif\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'is equal to 0'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "is equal to 0\n"
           ]
         }
       ],
